tests/build/cases/impl_ui_node/delegate_expr_error_incorrect_type.stderr
error[E0277]: the trait bound `NotANode: UiNode` is not satisfied
 --> cases/impl_ui_node/delegate_expr_error_incorrect_type.rs:9:27
  |
9 | #[impl_ui_node(delegate = &self.inner, delegate_mut = &mut self.inner)]
  | --------------------------^--------------------------------------------
  | |                         |
  | |                         the trait `UiNode` is not implemented for `NotANode`
  | required by a bound introduced by this call

error[E0277]: the trait bound `NotANode: UiNode` is not satisfied
 --> cases/impl_ui_node/delegate_expr_error_incorrect_type.rs:9:55
  |
9 | #[impl_ui_node(delegate = &self.inner, delegate_mut = &mut self.inner)]
  | ------------------------------------------------------^----------------
  | |                                                     |
  | |                                                     the trait `UiNode` is not implemented for `NotANode`
  | required by a bound introduced by this call
